fix image alignment issues and add default margin 15px to p tags

--- a/styles/sass/partials/_ueditor-inserts.scss
+++ b/styles/sass/partials/_ueditor-inserts.scss
@@ -300,3 +300,6 @@ div.uinsert-selector a:hover {
 .upfront-inserted_image-basic-wrapper .ueditor-insert{
 	margin-top:-15px;
 }
+.upfront-inserted_image-basic-wrapper .ueditor-insert{
+	margin-top:-15px;
+}
